5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1582_1559.log
== TEST (2019-03-19 16:01:36) 
-- CODE:
frase = "Ada Lovelace foi a primeira progamadora da história.".upper()
print(frase.)
-- ERROR:
File "XXXX", line 2
    print(frase.)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:01:43) 
-- CODE:
frase = "Ada Lovelace foi a primeira progamadora da história.".upper()
print(frase)
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGAMADORA DA HISTÓRIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:01:44) 
-- CODE:
frase = "Ada Lovelace foi a primeira progamadora da história.".upper()
print(frase)
-- EXECUTION TIME:
0.160371
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1559/main.py", line 2, in <module>
    print(frase)
UnicodeEncodeError: 'ascii' codec can't encode character '\xd3' in position 47: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:02:01) 
-- CODE:
frase="Ada Lovelace foi a primeira progamadora da história.".upper()
print(frase)
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGAMADORA DA HISTÓRIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:02:02) 
-- CODE:
frase="Ada Lovelace foi a primeira progamadora da história.".upper()
print(frase)
-- EXECUTION TIME:
0.181658
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1559/main.py", line 2, in <module>
    print(frase)
UnicodeEncodeError: 'ascii' codec can't encode character '\xd3' in position 47: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:02:37) 
-- CODE:
frase="Ada Lovelace foi a primeira progamadora da historia.".upper()
print(frase)
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:02:38) 
-- CODE:
frase="Ada Lovelace foi a primeira progamadora da historia.".upper()
print(frase)
-- EXECUTION TIME:
0.159185
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGAMADORA DA HISTORIA.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:02:54) 
-- CODE:
frase="Ada Lovelace foi a primeira programadora da historia.".upper()
print(frase)
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:02:54) 
-- CODE:
frase="Ada Lovelace foi a primeira programadora da historia.".upper()
print(frase)
-- EXECUTION TIME:
0.140936
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:06:56) 
-- CODE:
frase="Ada Lovelace foi a primeira programadora da historia.".upper()
print(frase)
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:06:59) 
-- CODE:
frase="Ada Lovelace foi a primeira programadora da historia.".upper()
print(frase)
-- EXECUTION TIME:
0.270955
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
